# hu_explore_demo

./: .gitignore  .gitmodules  Dockerfile  README.md  flake.nix  pyproject.toml
hu_explore_demo/: main.py  temp.ipynb  temp.py
hu_explore_demo/clinical_trial_protocol_extractor/: ProtocolRecordSchema.xsd  README.md  app.py  extractor_core.py  requirements.txt  style.css
hu_explore_demo/clinical_trial_protocol_extractor/.streamlit/: config.toml
scripts/: create_dotenv.py
